Fix display on smaller screens

--- a/src/css/text-box.css
+++ b/src/css/text-box.css
@@ -23,9 +23,6 @@
 }
 
 @media screen and (max-width: 1200px) {
-	div.dialogue-text {
-		padding-top: 1.5em;
-	}
 	div.dialogue-character {
 		font-size: 1.7em;
 	}
